--- a/index.css
+++ b/index.css
@@ -1,21 +1,58 @@
 .header {
   display: flex;
   flex-direction: row;
+  min-height: 5vh;
+}
+
+.brand {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
+.brand div {
+  font-size: 2rem;
+  flex-shrink: 1;
 }
 
 .find {
-  width: 4em;
-  height: 2em;
-  font-size: 2rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.find button {
+  font-size: 1rem;
+  padding: 0.5em;
+  margin: 1em;
+  color: white;
+  background-color: darkgrey;
+  border-radius: 10px;
 }
 .request-option-bar {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .request-option {
-  padding: 1em 1em;
+  margin: 0.1em 0.2em;
+  padding: 0.1em 0.2em;
   font-size: 1rem;
+  width: 50%;
+  flex-grow: 1;
+  background-color: dodgerblue;
+  color: white;
+  border-radius: 5px;
+}
+
+.request-option:hover,
+.request-option:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .sort-option-bar {
@@ -34,4 +71,52 @@
 
 .movie {
   margin-bottom: 1em;
+  background-color: aqua;
+}
+
+@media (min-width: 600px) {
+  .request-option {
+    font-size: 1.5rem;
+    width: 30%;
+    flex-grow: 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  .request-option {
+    font-size: 2rem;
+    width: 15%;
+    flex-grow: 1;
+  }
+
+  .request-option.query-term {
+    padding: 1em 1em;
+    font-size: 1.5rem;
+    width: 100%;
+    flex-grow: 1;
+  }
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border-radius: 10px;
+  /* border: 1px solid #888; */
+  width: 80%; /* Could be more or less, depending on screen size */
 }
