--- a/index.css
+++ b/index.css
@@ -70,13 +70,51 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  align-items: flex-start;
 }
 
 .movie {
   margin-bottom: 1em;
-  background-color: aqua;
+  background-color: floralwhite;
   width: 90%;
-  height: 20vh;
+  min-height: 20vh;
+  display: flex;
+  align-items: flex-start;
+  font-size: 1rem;
+  padding: 0.5em;
+  border-radius: 5px;
+  box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
+    0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+}
+
+.movie-data-1 {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.movie-data-1 img {
+  margin-bottom: 1em;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
+.movie-data-2 {
+  padding-left: 1em;
+  padding-right: 0.3em;
+  padding-top: 0.3em;
+  width: 70%;
+}
+
+.movie-data-2 p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.3em;
 }
 
 @media (min-width: 600px) {
