--- a/css/index.css
+++ b/css/index.css
@@ -100,6 +100,12 @@
   align-items: flex-start;
 }
 
+.indicatorLoading {
+  text-align: center;
+  font-size: 2rem;
+  margin: 1em;
+}
+
 .movie {
   margin-bottom: 1em;
   background-color: floralwhite;
