--- a/css/index.css
+++ b/css/index.css
@@ -205,3 +205,18 @@ h6 {
   /* border: 1px solid #888; */
   width: 80%; /* Could be more or less, depending on screen size */
 }
+
+.query-param-key {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 0.2em;
+}
+
+.query-param-value {
+  font-size: 2rem;
+  margin-bottom: 0.5em;
+  background-color: khaki;
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  cursor: pointer;
+}
