--- a/css/index.css
+++ b/css/index.css
@@ -220,3 +220,56 @@ h6 {
   padding: 0.2em 0.5em;
   cursor: pointer;
 }
+
+.movie-detail {
+  margin-bottom: 1em;
+  background-color: floralwhite;
+  width: 90%;
+  min-height: 20vh;
+  display: flex;
+  align-items: flex-start;
+  font-size: 1rem;
+  padding: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
+    0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+}
+
+.movie-detail-1 {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.movie-detail-1 img {
+  margin-bottom: 1em;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
+.movie-detail-2 {
+  padding-left: 1em;
+  padding-right: 0.3em;
+  padding-top: 0.3em;
+  width: 70%;
+}
+
+.movie-detail-2 a {
+  text-decoration: none;
+}
+
+.movie-detail-2 div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.3em;
+}
+
+.movie-detail-2 p {
+  margin-bottom: 0.3em;
+  font-size: 1.5rem;
+}
