--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -18,20 +18,6 @@
   flex-shrink: 1;
 }
 
-.find {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-}
-.find button {
-  font-size: 1rem;
-  padding: 0.5em;
-  margin: 1em;
-  color: white;
-  background-color: darkgrey;
-  border-radius: 10px;
-}
 .request-option-bar {
   display: flex;
   flex-wrap: wrap;
@@ -65,12 +51,59 @@
   font-size: 1rem;
 }
 
+.requested-query-container {
+  margin: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.requested-query {
+  font-size: 1.5rem;
+  padding: 0.1em 0.5em;
+  margin: 0.2em 0.3em;
+  background-color: seagreen;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  align-items: baseline;
+}
+
+.requested-query.clickable {
+  cursor: pointer;
+}
+
+.requested-query-key {
+  font-size: 1rem;
+  margin-right: 0.2em;
+}
+
+.requested-query-value {
+  font-size: 2rem;
+}
+
+.requested-query.init-query {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: darkgrey;
+}
+.requested-query.init-query div {
+  font-size: 1.2em;
+}
+
 #result-container {
   margin: 0.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-start;
+}
+
+.indicatorLoading {
+  text-align: center;
+  font-size: 2rem;
+  margin: 1em;
 }
 
 .movie {
@@ -83,6 +116,7 @@
   font-size: 1rem;
   padding: 0.5em;
   border-radius: 5px;
+  cursor: pointer;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
 }
@@ -170,4 +204,72 @@ h6 {
   border-radius: 10px;
   /* border: 1px solid #888; */
   width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.query-param-key {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 0.2em;
+}
+
+.query-param-value {
+  font-size: 2rem;
+  margin-bottom: 0.5em;
+  background-color: khaki;
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  cursor: pointer;
+}
+
+.movie-detail {
+  margin-bottom: 1em;
+  background-color: floralwhite;
+  width: 90%;
+  min-height: 20vh;
+  display: flex;
+  align-items: flex-start;
+  font-size: 1rem;
+  padding: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
+    0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+}
+
+.movie-detail-1 {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.movie-detail-1 img {
+  margin-bottom: 1em;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
+.movie-detail-2 {
+  padding-left: 1em;
+  padding-right: 0.3em;
+  padding-top: 0.3em;
+  width: 70%;
+}
+
+.movie-detail-2 a {
+  text-decoration: none;
+}
+
+.movie-detail-2 div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.3em;
+}
+
+.movie-detail-2 p {
+  margin-bottom: 0.3em;
+  font-size: 1.5rem;
 }
